tests/baselines/reference/asiPreventsParsingAsAmbientExternalModule02.errors.txt
asiPreventsParsingAsAmbientExternalModule02.ts(4,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== asiPreventsParsingAsAmbientExternalModule02.ts (1 errors) ====
    var declare: number;
    var module: string;
    
    module container {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        declare                // this is the identifier 'declare'
        module                 // this is the identifier 'module'
        "my external module"   // this is just a string
        { }                    // this is a block body
    }